# rfc3986

./: .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  HISTORY.rst  MANIFEST.in  README.rst  dev-requirements.txt  project.config  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: main.yml
debian/: changelog  control  copyright  rules
docs/source/: conf.py  index.rst  narrative.rst  requirements.txt
docs/source/api-ref/: api.rst  builder.rst  index.rst  iri.rst  miscellaneous.rst  uri.rst  validators.rst
docs/source/release-notes/: 0.2.0.rst  0.2.1.rst  0.2.2.rst  0.3.0.rst  0.3.1.rst  0.4.0.rst  0.4.1.rst  0.4.2.rst  1.0.0.rst  1.1.0.rst  1.2.0.rst  1.3.0.rst  1.3.1.rst  1.3.2.rst  1.4.0.rst  1.5.0.rst  2.0.0.rst  2.0.1.rst  index.rst  unreleased.rst
docs/source/user/: building.rst  parsing.rst  validating.rst
rfc3986/: __init__.py  api.py  exceptions.py  misc.py  normalizers.py  parseresult.py  uri.py  urlparse.py  util.py
src/rfc3986/: __init__.py  _mixin.py  _typing_compat.py  abnf_regexp.py  api.py  builder.py  compat.py  exceptions.py  iri.py  misc.py  normalizers.py  parseresult.py  uri.py  validators.py
tests/: base.py  conftest.py  test_api.py  test_builder.py  test_iri.py  test_misc.py  test_normalizers.py  test_parseresult.py  test_unicode_support.py  test_uri.py  test_validators.py  verify_types.py
