[metadata]
name = rfc3986
version = attr: rfc3986.__version__
description = Validating URI References per RFC 3986
long_description = file: README.rst
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
url = http://rfc3986.readthedocs.io
license = Apache 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir = =src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
idna2008 = idna

[options.package_data]
* =
    LICENSE

[bdist_wheel]
universal = 1
