[metadata]
name = rfc3986
version = attr: rfc3986.__version__
description = Validating URI References per RFC 3986
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://rfc3986.readthedocs.io
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
idna2008 =
    idna

[options.package_data]
* =
    LICENSE
