[metadata]
name = rfc3986
version = attr: rfc3986.__version__
description = Validating URI References per RFC 3986
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://rfc3986.readthedocs.io
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = Apache 2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source = https://github.com/python-hyper/rfc3986

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
idna2008 =
    idna

[options.package_data]
* =
    LICENSE

[bdist_wheel]
universal = 1
